--- a/404.md
+++ b/404.md
@@ -1,3 +1,11 @@
-# 404 - 页面未找到
+<head>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+</head>
 
-🚫 抱歉，你访问的页面不存在。请返回 [首页](./) 。
+# 404 We've Lost You!
+
+Sorry, we couldn't find the page you're looking for.
